Add CredentialLoader, credentials files and update .gitignore